# imxp-build

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.example  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml
cmake/toolchains/: zig-linux-x64.cmake  zig-macos-arm64.cmake  zig-macos-x64.cmake  zig-windows-x64.cmake
scripts/: build-all.sh  build-nomacos.sh
src/: config.h.in  main.cpp
